web/scripts/i18n-governance/fixtures/invalid-semantic-title-locale-object/src/modules/demo/UnsafeSemanticTitle.ts
export const demoColumn = {
  key: 'status',
  semanticTitle: {
    'zh-CN': '状态',
    'en-US': 'Status',
  },
};
